--- a/emoji/index.html
+++ b/emoji/index.html
@@ -18,7 +18,7 @@
 
     <main class="content">
         <h1>Emoji</h1>
-
+        <p>Hace clic en el emoji para modificarlo</p>
         <button onclick="cambiarEmoji()">
             <img id="imagen" src="./images/smile.png" alt="delivery">
         </button>
